# Tomorrow-s-analysts-ds-bootcamp

./: Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: publish.yml
ansible/: deploy-virtual-assistant.yml  docker-build-pull.yml  install-packages.yml  inventory.ini  playbook.yml
handlers/: command_handlers.py  message_handlers.py
tests/: test_telegram_openai_api.py
